# esy-ocaml-inverted-ctypes-stubs

./: .gitignore  README.md  build.sh  package.json
bindings/: Stub_Bindings.ml
client/: asdf.cpp
esy.lock/: index.json
js/: binding.gyp  bsconfig.json  package.json  test.js
js/include/: mylibx.h
js/src/: native.cpp  test.res
js/src/cpp/: native.cpp
js/src/res/: test.res
lib/: Util.ml  dune
mylib/: dune  mylib.h  mylib.ml  mylibx.cc
