(executable
 (name mylib)
 (libraries ctypes ctypes.foreign)
 (foreign_stubs
  (language c)
  (names mylib)
  (flags
    -fPIC
    -DNAPI_VERSION=3
    -Daddon_EXPORTS
    -I/home/wlee/.cmake-js/node-x64/v15.8.0/include/node))
 (ocamlopt_flags :standard -fPIC -runtime-variant _pic)
 (flags :standard -linkall)
 (modes (native shared_object)))

(install
 (section lib)
 (files (mylib.so as libmylib.so) mylib.h))
